force-app/main/default/objects/BillingIDs__c/fields/BillingGLTreatment_CV_Export__c.field-meta.xml
<CustomField>
    <fullName>BillingGLTreatment_CV_Export__c</fullName>
    <label>BillingGLTreatment_CV_Export</label>
    <length>18</length>
    <type>Text</type>
</CustomField>