force-app/main/default/objects/BillingIDs__c/fields/BillingRule_CV_EXPORT__c.field-meta.xml
<CustomField>
    <fullName>BillingRule_CV_EXPORT__c</fullName>
    <description>2PACE</description>
    <label>BillingRule_CV_EXPORT</label>
    <length>18</length>
    <type>Text</type>
</CustomField>