force-app/main/default/objects/BillingIDs__c/fields/BillingRule_CV_SUISSE__c.field-meta.xml
<CustomField>
    <fullName>BillingRule_CV_SUISSE__c</fullName>
    <label>BillingRule_CV_SUISSE</label>
    <length>18</length>
    <type>Text</type>
</CustomField>