force-app/main/default/objects/BillingIDs__c/fields/BillingRule_CVC_FRANCE__c.field-meta.xml
<CustomField>
    <fullName>BillingRule_CVC_FRANCE__c</fullName>
    <description>2PACE</description>
    <label>BillingRule_CVC_FRANCE</label>
    <length>18</length>
    <type>Text</type>
</CustomField>