force-app/main/default/objects/BillingIDs__c/fields/BillingTreatment_CV_FRANCE__c.field-meta.xml
<CustomField>
    <fullName>BillingTreatment_CV_FRANCE__c</fullName>
    <description>2PACE</description>
    <label>BillingTreatment_CV_FRANCE</label>
    <length>18</length>
    <type>Text</type>
</CustomField>