force-app/main/default/objects/BillingIDs__c/fields/BillingTreatment_CVC_EXPORT__c.field-meta.xml
<CustomField>
    <fullName>BillingTreatment_CVC_EXPORT__c</fullName>
    <description>2PACE</description>
    <label>BillingTreatment_CVC_EXPORT</label>
    <length>18</length>
    <type>Text</type>
</CustomField>