force-app/main/default/objects/BillingIDs__c/fields/FB_Accounting_CerbavetSuisse__c.field-meta.xml
<CustomField>
    <fullName>FB_Accounting_CerbavetSuisse__c</fullName>
    <label>FB_Accounting_CerbavetSuisse</label>
    <length>18</length>
    <type>Text</type>
</CustomField>