force-app/main/default/objects/BillingIDs__c/fields/Legal_Entity_Cerbavet_CH__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Cerbavet_CH__c</fullName>
    <label>Legal Entity Cerbavet CH</label>
    <length>18</length>
    <type>Text</type>
</CustomField>