force-app/main/default/objects/BillingIDs__c/fields/RevenueRecognitionRule_Invoice_Full_CH__c.field-meta.xml
<CustomField>
    <fullName>RevenueRecognitionRule_Invoice_Full_CH__c</fullName>
    <label>RevenueRecognitionRule_Invoice_Full_CH</label>
    <length>18</length>
    <type>Text</type>
</CustomField>