force-app/main/default/objects/BillingIDs__c/fields/RevenueRecognitionRule_Invoice_Full_CV__c.field-meta.xml
<CustomField>
    <fullName>RevenueRecognitionRule_Invoice_Full_CV__c</fullName>
    <description>2PACE</description>
    <label>RevenueRecognitionRule_Invoice_Full_CV</label>
    <length>18</length>
    <type>Text</type>
</CustomField>