force-app/main/default/objects/BillingIDs__c/fields/SFBD_Collection_Agent__c.field-meta.xml
<CustomField>
    <fullName>SFBD_Collection_Agent__c</fullName>
    <description>2PACE
Collection Agent to be used by default</description>
    <label>SFBD_Collection_Agent</label>
    <length>18</length>
    <type>Text</type>
</CustomField>