force-app/main/default/objects/BillingIDs__c/fields/SFBD_DunningMethod_Clinics_CashOnInvoice__c.field-meta.xml
<CustomField>
    <fullName>SFBD_DunningMethod_Clinics_CashOnInvoice__c</fullName>
    <description>Invoice Created date +25</description>
    <label>SFBD_DunningMethod_Clinics_CashOnInvoice</label>
    <length>18</length>
    <type>Text</type>
</CustomField>