force-app/main/default/objects/BillingIDs__c/fields/SFBD_DunningMethod_Clinics_Net30__c.field-meta.xml
<CustomField>
    <fullName>SFBD_DunningMethod_Clinics_Net30__c</fullName>
    <description>2PACE</description>
    <label>SFBD_DunningMethod_Clinics_Net30</label>
    <length>18</length>
    <type>Text</type>
</CustomField>