force-app/main/default/objects/BillingIDs__c/fields/TaxGLRule_CV_Suisse__c.field-meta.xml
<CustomField>
    <fullName>TaxGLRule_CV_Suisse__c</fullName>
    <label>TaxGLRule_CV_Suisse</label>
    <length>18</length>
    <type>Text</type>
</CustomField>