force-app/main/default/objects/BillingIDs__c/fields/TaxGLTreatment_CV_France__c.field-meta.xml
<CustomField>
    <fullName>TaxGLTreatment_CV_France__c</fullName>
    <label>TaxGLTreatment_CV_France</label>
    <length>18</length>
    <type>Text</type>
</CustomField>