force-app/main/default/objects/BillingIDs__c/fields/TaxGLTreatment_CV_TOM__c.field-meta.xml
<CustomField>
    <fullName>TaxGLTreatment_CV_TOM__c</fullName>
    <label>TaxGLTreatment_CV_TOM</label>
    <length>18</length>
    <type>Text</type>
</CustomField>