force-app/main/default/objects/BillingIDs__c/fields/TR_DOM__c.field-meta.xml
<CustomField>
    <fullName>TR_DOM__c</fullName>
    <description>2PACE</description>
    <label>TR DOM</label>
    <length>18</length>
    <type>Text</type>
</CustomField>