force-app/main/default/objects/BillingIDs__c/fields/TR_Export__c.field-meta.xml
<CustomField>
    <fullName>TR_Export__c</fullName>
    <description>2PACE</description>
    <label>TR Export</label>
    <length>18</length>
    <type>Text</type>
</CustomField>