force-app/main/default/objects/BillingIDs__c/fields/TR_France_Metropolitaine_CVC__c.field-meta.xml
<CustomField>
    <fullName>TR_France_Metropolitaine_CVC__c</fullName>
    <label>TR France Metropolitaine CVC</label>
    <length>18</length>
    <type>Text</type>
</CustomField>