force-app/main/default/objects/BillingIDs__c/fields/TR_Suisse__c.field-meta.xml
<CustomField>
    <fullName>TR_Suisse__c</fullName>
    <label>TR Suisse</label>
    <length>18</length>
    <type>Text</type>
</CustomField>