force-app/main/default/objects/BillingIDs__c/fields/TR_TOM_CVC__c.field-meta.xml
<CustomField>
    <fullName>TR_TOM_CVC__c</fullName>
    <label>TR TOM CVC</label>
    <length>18</length>
    <type>Text</type>
</CustomField>