force-app/main/default/objects/BillingIDs__c/fields/TT_DOM_CVC__c.field-meta.xml
<CustomField>
    <fullName>TT_DOM_CVC__c</fullName>
    <label>TT DOM CVC</label>
    <length>18</length>
    <type>Text</type>
</CustomField>