force-app/main/default/objects/BillingIDs__c/fields/TT_Export__c.field-meta.xml
<CustomField>
    <fullName>TT_Export__c</fullName>
    <label>TT Export</label>
    <length>18</length>
    <type>Text</type>
</CustomField>