force-app/main/default/objects/BillingIDs__c/fields/TT_France_metropolitaine_CVC__c.field-meta.xml
<CustomField>
    <fullName>TT_France_metropolitaine_CVC__c</fullName>
    <label>TT France metropolitaine CVC</label>
    <length>18</length>
    <type>Text</type>
</CustomField>